<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_human_detector</name>
  <version>0.0.0</version>
  <description>RMF Human detector</description>
  <maintainer email="alejandro@openrobtics.org">Alejandro Hernandez</maintainer>
  <license>Apache License 2.0</license>
  <author email="pranay@openrobtics.org">Pranay Shirodkar</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_geometry</depend>
  <depend>OpenCV</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rmf_building_map_msgs</depend>
  <depend>rmf_obstacle_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <exec_depend>ros2launch</exec_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>rmf_utils</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
